reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_circular_reference_generic_without_box_parent-4.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super :: into_input_python_code :: <\nTestStructWithCircularReferenceGenericWithoutBoxParent::<\nTestStructWithCircularReferenceGenericWithoutBoxParent<u8, u16>,\nTestStructWithCircularReferenceGenericWithoutBoxParent<String, u32>, > > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Type variables for generic types


A = TypeVar("A")

B = TypeVar("B")

C = TypeVar("C")

D = TypeVar("D")


class ReflectapiDemoTestsGenericsTestStructWithCircularReferenceGenericWithoutBox(
    BaseModel, Generic[A, B]
):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    f1: A = Field(serialization_alias="_f1", validation_alias="_f1")
    f2: B = Field(serialization_alias="_f2", validation_alias="_f2")


class ReflectapiDemoTestsGenericsTestStructWithCircularReferenceGenericWithou_8e2b5cb9(
    BaseModel, Generic[C, D]
):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    f: reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithoutBox[
        D, C
    ] = Field(serialization_alias="_f", validation_alias="_f")


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class generics:
            """Namespace for generics types."""

            TestStructWithCircularReferenceGenericWithoutBox = ReflectapiDemoTestsGenericsTestStructWithCircularReferenceGenericWithoutBox
            TestStructWithCircularReferenceGenericWithou_8e2b5cb9 = ReflectapiDemoTestsGenericsTestStructWithCircularReferenceGenericWithou_8e2b5cb9


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithou_8e2b5cb9[
                reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithou_8e2b5cb9[
                    int, int
                ],
                reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithou_8e2b5cb9[
                    str, int
                ],
            ]
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithou_8e2b5cb9[
                reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithou_8e2b5cb9[
                    int, int
                ],
                reflectapi_demo.tests.generics.TestStructWithCircularReferenceGenericWithou_8e2b5cb9[
                    str, int
                ],
            ]
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsGenericsTestStructWithCircularReferenceGenericWithoutBox,
    ReflectapiDemoTestsGenericsTestStructWithCircularReferenceGenericWithou_8e2b5cb9,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
